V3168 Aggiornamento immagini vasche di raccolta

--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -42,7 +42,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA1" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="1153" Canvas.Top="241">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-SEPARATION" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="1153" Canvas.Top="241">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
