--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -130,8 +130,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Rectangle HorizontalAlignment="Left" Height="102" Stroke="White" StrokeThickness="2" VerticalAlignment="Center" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1273" Canvas.Top="86"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="437" Canvas.Top="494"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="930" Canvas.Top="377"/>
+        <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="437" Canvas.Top="494" ComponentName="330-41-LT1" TrendName="LEVEL"/>
+        <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="930" Canvas.Top="377" TrendName="LEVEL" ComponentName="335-41-LT1"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="401" Canvas.Top="388">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
