--- a/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
@@ -293,15 +293,15 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="FKS-71-ECS5" Canvas.Left="796" Canvas.Top="72"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="FKS-71-ECS6" Canvas.Left="126" Canvas.Top="318"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="FKS-71-ECS7" Canvas.Left="567" Canvas.Top="319"/>
+            ComponentName="FKS-71-ECS6" Canvas.Left="481" Canvas.Top="252"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="FKS-71-ECS7" Canvas.Left="577" Canvas.Top="309"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
-            ComponentName="FKS-71-ECS8" Canvas.Left="1017" Canvas.Top="320"/>
+            ComponentName="FKS-71-ECS8" Canvas.Left="796" Canvas.Top="253"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="888-01-MA1" Canvas.Left="81" Canvas.Top="415"/>
