--- a/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
@@ -62,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="426" Canvas.Top="99">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="220-SEPARATION" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="426" Canvas.Top="99">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="446" Canvas.Top="151">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="220-SEPARATION" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="446" Canvas.Top="151">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
